--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
 
+:root {
+    --primary-color: #047AED;
+}
+
 * {
     box-sizing: border-box;
     padding: 0;
@@ -35,8 +39,9 @@ img {
     width: 100%;
 }
 
+/* Navbar */
 .navbar {
-    background-color: #047AED;
+    background-color: var(--primary-color);
     color: #FFF;
     height: 70px;
 }
@@ -59,6 +64,28 @@ img {
     justify-content: space-between;
 }
 
+/* Showcase */
+.showcase {
+    height: 400px;
+    background-color: var(--primary-color);
+    color: #FFF;
+    position: relative;
+}
+
+.showcase h1 {
+    font-size: 40px;
+}
+
+.showcase p {
+    margin: 20px 0;
+}
+
+.showcase .grid {
+    grid-template-columns: 55% 45%;
+    gap: 30px;
+}
+
+/* Utilities */
 .container {
     max-width: 1100px;
     margin: 0 auto;
@@ -68,6 +95,15 @@ img {
 
 .flex {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
     justify-content: center;
     align-items: center;
     height: 100%;
