--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,21 @@ img {
     outline: none;
 }
 
+.showcase::before,
+.showcase::after {
+    content: '';
+    position: absolute;
+    height: 100px;
+    bottom: -70px;
+    right: 0;
+    left: 0;
+    background: #FFF;
+    transform: skewY(-2deg);
+    -webkit-transform: skewY(-2deg);
+    -moz-transform: skewY(-2deg);
+    -ms-transform: skewY(-2deg);
+}
+
 /* Utilities */
 .container {
     max-width: 1100px;
@@ -137,7 +152,16 @@ img {
     background-color: var(--primary-color);
     color: #FFF;
     border: none;
-    border-radius: 5px;
+    border-radius: 5px; 
+}
+
+.btn-outline {
+    background-color: transparent;
+    border: 1px solid #FFF;
+}
+
+.btn:hover {
+    transform: scale(0.98);
 }
 
 .flex {
