add background and button helper classes

--- a/css/utilities.css
+++ b/css/utilities.css
@@ -33,6 +33,31 @@
     transform: scale(0.98);
 }
 
+/* Backgrounds & Colored buttons */
+.bg-primary,
+.btn-primary {
+    background-color: var(--primary-color);
+    color: #FFF;
+}
+
+.bg-secondary,
+.btn-secondary {
+    background-color: var(--secondary-color);
+    color: #FFF;
+}
+
+.bg-dark,
+.btn-dark {
+    background-color: var(--dark-color);
+    color: #FFF;
+}
+
+.bg-light,
+.btn-light {
+    background-color: var(--light-color);
+    color: #333;
+}
+
 .text-center {
     text-align: center;
 }
