--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,9 @@
 
 :root {
     --primary-color: #047AED;
+    --secondary-color: #1C3FA8;
+    --dark-color: #002240;
+    --light-color: #F4F4F4;  
 }
 
 * {
@@ -156,4 +159,29 @@ img {
 .cli .grid > *:first-child {
     grid-column: 1 / span 2;
     grid-row: 1 / span 2;
+}
+
+/* Cloud */
+.cloud .grid {
+    grid-template-columns: 4fr 3fr;
+}
+
+/* Languages */
+.languages .flex {
+    flex-wrap: wrap;
+}
+
+.languages .card {
+    text-align: center;
+    margin: 18px 10px 40px;
+    transition: transform 0.2s ease-in;
+}
+
+.languages .card h4 {
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+.languages .card:hover {
+    transform: translateY(-15px);
 }
