--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@
     --secondary-color: #1C3FA8;
     --dark-color: #002240;
     --light-color: #F4F4F4;  
+    --success-color: #5CB85C;
+    --error-color: #D9534F;
 }
 
 * {
@@ -40,6 +42,13 @@ p {
 
 img {
     width: 100%;
+}
+
+code, 
+pre {
+    background: #333;
+    color: #FFF;
+    padding: 10px;
 }
 
 /* Navbar */
@@ -187,7 +196,8 @@ img {
 }
 
 /* Features */
-.features-head img {
+.features-head img,
+.docs-head img {
     width: 200px;
     justify-self: flex-end;
 }
@@ -211,6 +221,27 @@ img {
 
 .features-main .grid > *:nth-child(2) {
     grid-column: 1 / span 2;
+}
+
+/* Docs */
+.docs-main h3 {
+    margin: 20px 0;
+}
+
+.docs-main .grid {
+    grid-template-columns: 1fr 2fr;
+    align-items: flex-start;
+}
+
+.docs-main nav li {
+    font-size: 17px;
+    padding-bottom: 5px;
+    margin-bottom: 5px;
+    border-bottom: 1px #CCC solid;
+}
+
+.docs-main a:hover {
+    font-weight: bold;
 }
 
 /* Footer */
